fixing hieght display on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
  .layout-cont {
     overflow: hidden;
-    height: 100vh;
+    height: 100svh;
     width: 100%;
     display: grid;
     grid-template-rows: 1fr auto auto;
